- (tim) [includes.h openbsd-compat/getopt.c openbsd-compat/getopt.h] 	 rename getopt() to BSDgetopt() to keep form conflicting with 	 system getopt(). 	 [Makefile.in configure.in] disable filepriv until I can add 	 missing procpriv calls.

--- a/Makefile.in
+++ b/Makefile.in
@@ -202,7 +202,7 @@ install-files:
 	ln -s ssh$(EXEEXT) $(DESTDIR)$(bindir)/slogin
 	-rm -f $(DESTDIR)$(mandir)/$(mansubdir)1/slogin.1
 	ln -s ssh.1 $(DESTDIR)$(mandir)/$(mansubdir)1/slogin.1
-	@FILEPRIV@ -f dev,filesys,driver $(DESTDIR)$(bindir)/ssh $(DESTDIR)$(bindir)/slogin
+	#@FILEPRIV@ -f dev,filesys,driver $(DESTDIR)$(bindir)/ssh $(DESTDIR)$(bindir)/slogin
 	if [ ! -d $(DESTDIR)$(sysconfdir) ]; then \
 		$(srcdir)/mkinstalldirs $(DESTDIR)$(sysconfdir); \
 	fi
