- (djm) More makefile infrastructre for smartcard support, also based    on Ben's work

--- a/configure.in
+++ b/configure.in
@@ -2058,7 +2058,7 @@ fi
 
 AC_EXEEXT
 
-AC_OUTPUT(Makefile openbsd-compat/Makefile ssh_prng_cmds)
+AC_OUTPUT(Makefile openbsd-compat/Makefile scard/Makefile ssh_prng_cmds)
 
 # Print summary of options
 
