--- a/scard/Makefile.in
+++ b/scard/Makefile.in
@@ -24,4 +24,4 @@ distclean: clean
 
 install: Ssh.bin
 	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(datadir)
-	$(INSTALL) -m 0644 -s $(srcdir)/Ssh.bin $(DESTDIR)$(datadir)/Ssh.bin
+	$(INSTALL) -m 0644 $(srcdir)/Ssh.bin $(DESTDIR)$(datadir)/Ssh.bin
