--- a/Makefile.in
+++ b/Makefile.in
@@ -158,6 +158,7 @@ veryclean:
 	rm -f *.out core
 	rm -f Makefile config.h config.status ssh_prng_cmds *~
 	(cd openbsd-compat; $(MAKE) distclean)
+	(cd scard; $(MAKE) distclean)
 
 mrproper: distclean
 
