--- a/Makefile.in
+++ b/Makefile.in
@@ -142,13 +142,14 @@ $(CONFIGFILES): $(CONFIGFILES_IN)
 
 clean:
 	rm -f *.o *.a $(TARGETS) logintest config.cache config.log 
-	rm -f *.out core
+	rm -f *.out core 
 	(cd openbsd-compat; $(MAKE) clean)
 
 distclean:
 	rm -f *.o *.a $(TARGETS) logintest config.cache config.log 
 	rm -f *.out core
 	rm -f Makefile config.h config.status ssh_prng_cmds *~
+	rm -rf autom4te.cache
 	(cd openbsd-compat; $(MAKE) distclean)
 	(cd scard; $(MAKE) distclean)
 
