--- a/Makefile.in
+++ b/Makefile.in
@@ -86,8 +86,9 @@ $(SSHDOBJS): config.h
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $<
 
 LIBCOMPAT=openbsd-compat/libopenbsd-compat.a
-$(LIBCOMPAT): config.h
+$(LIBCOMPAT): always
 	(cd openbsd-compat; $(MAKE))
+always:
 
 libssh.a: $(LIBSSH_OBJS)
 	$(AR) rv $@ $(LIBSSH_OBJS)
