Fix install: when building outside of source tree and using --src=/full_path/to/openssh Patch by Mark D. Baushke <mdb@juniper.net>

--- a/scard/Makefile.in
+++ b/scard/Makefile.in
@@ -22,6 +22,6 @@ distprep: Ssh.bin
 distclean: clean
 	rm -f Makefile *~
 
-install: Ssh.bin
+install: $(srcdir)/Ssh.bin
 	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(datadir)
 	$(INSTALL) -m 0644 $(srcdir)/Ssh.bin $(DESTDIR)$(datadir)/Ssh.bin
