--- a/configure.ac
+++ b/configure.ac
@@ -915,10 +915,12 @@ AC_ARG_WITH(prngd-socket,
 			if test ! -z "$PRNGD_PORT" ; then
 				AC_MSG_ERROR(You may not specify both a PRNGD/EGD port and socket)
 			fi
-			if ! echo "$withval" | grep -q '^/' ; then 
+			if echo "$withval" | grep '^/' >/dev/null 2>&1 ; then 
+				# Good
+			else
 				AC_MSG_ERROR(You must specify an absolute path to the entropy socket)
 			fi			
-			if ! test -r "$withval" ; then
+			if test ! -r "$withval" ; then
 				AC_MSG_WARN(Entropy socket is not readable)
 			fi
 			PRNGD_SOCKET="$withval"
