--- a/configure.ac
+++ b/configure.ac
@@ -1253,7 +1253,7 @@ fi
 
 TYPE_SOCKLEN_T
 
-AC_CHECK_TYPES(sig_atomic_t)
+AC_CHECK_TYPES(sig_atomic_t,,,[#include <signal.h>])
 
 AC_CACHE_CHECK([for size_t], ac_cv_have_size_t, [
 	AC_TRY_COMPILE(
