--- a/configure.ac
+++ b/configure.ac
@@ -115,7 +115,7 @@ case "$host" in
 	AC_DEFINE(WITH_IRIX_ARRAY)
 	AC_DEFINE(WITH_IRIX_PROJECT)
 	AC_DEFINE(WITH_IRIX_AUDIT)
-	AC_CHECK_FUNC(jlimit_startjob, [AC_DEFINE(WITH_IRIX_JOBS)])
+	AC_DEFINE(WITH_IRIX_JOBS)
 	AC_DEFINE(BROKEN_INET_NTOA)
 	;;
 *-*-linux*)
