- (stevesk) HAVE_ACCRIGHTS_IN_MSGHDR configure support

--- a/configure.ac
+++ b/configure.ac
@@ -1576,6 +1576,22 @@ if test "x$ac_cv_have_pw_change_in_struct_passwd" = "xyes" ; then
 	AC_DEFINE(HAVE_PW_CHANGE_IN_PASSWD)
 fi
 
+AC_CACHE_CHECK([for msg_accrights field in struct msghdr],
+		ac_cv_have_accrights_in_msghdr, [
+	AC_TRY_COMPILE(
+		[
+#include <sys/socket.h>
+#include <sys/uio.h>
+		],
+		[ struct msghdr m; m.msg_accrights = 0; ],
+		[ ac_cv_have_accrights_in_msghdr="yes" ],
+		[ ac_cv_have_accrights_in_msghdr="no" ]
+	)
+])
+if test "x$ac_cv_have_accrights_in_msghdr" = "xyes" ; then
+	AC_DEFINE(HAVE_ACCRIGHTS_IN_MSGHDR)
+fi
+
 AC_CACHE_CHECK([if libc defines __progname], ac_cv_libc_defines___progname, [
 	AC_TRY_LINK([], 
 		[ extern char *__progname; printf("%s", __progname); ], 
