--- a/configure.ac
+++ b/configure.ac
@@ -1008,7 +1008,7 @@ AC_DEFINE_UNQUOTED(ENTROPY_TIMEOUT_MSEC, $entropy_timeout)
 
 OPATH=$PATH
 PATH=/bin:/usr/bin
-/bin/test -L /bin && PATH=/usr/bin
+/bin/test -L /bin 2> /dev/null && PATH=/usr/bin
 test -d /sbin && PATH=$PATH:/sbin
 test -d /usr/sbin && PATH=$PATH:/usr/sbin
 PATH=$PATH:/etc:$OPATH
