--- a/configure.ac
+++ b/configure.ac
@@ -1730,9 +1730,9 @@ AC_ARG_WITH(opensc,
 					blibpath="$blibpath:${withval}"
 				fi
 			fi
-			AC_CHECK_HEADERS(opensc-pkcs15.h)
+			AC_CHECK_HEADERS(opensc/pkcs15.h)
 			if test "$ac_cv_header_opensc_pkcs15_h" != yes; then
-				AC_MSG_ERROR(Can't find opensc-pkcs15.h)
+				AC_MSG_ERROR(Can't find opensc/pkcs15.h)
 			fi
 			AC_CHECK_LIB(opensc, sc_pkcs15_bind)
 			if test "$ac_cv_lib_opensc_sc_pkcs15_bind" != yes; then
