oops.  time for beer i think.

--- a/configure.ac
+++ b/configure.ac
@@ -537,7 +537,7 @@ AC_CHECK_FUNCS(arc4random b64_ntop bcopy bindresvport_sa \
 	mkdtemp mmap openpty readpassphrase realpath \
 	rresvport_af setdtablesize setegid setenv seteuid \
 	setlogin setproctitle setresgid setreuid setrlimit \
-	setsid setvbuf sigaction sigvec snprintf strerror \
+	setsid setvbuf sigaction sigvec snprintf socketpair strerror \
 	strlcat strlcpy strmode strsep sysconf tcgetpgrp utimes \
 	vhangup vsnprintf waitpid __b64_ntop _getpty)
 
