- (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by    Robert Urban <urban@spielwiese.de>

--- a/configure.ac
+++ b/configure.ac
@@ -534,9 +534,9 @@ AC_CHECK_FUNCS(arc4random b64_ntop bcopy bindresvport_sa \
 	getaddrinfo getcwd getgrouplist getnameinfo getopt \
 	getrlimit getrusage getttyent glob inet_aton inet_ntoa \
 	inet_ntop innetgr login_getcapbool md5_crypt memmove \
-	mkdtemp mmap openpty readpassphrase realpath recvmsg \
-	rresvport_af sendmsg setdtablesize setegid setenv seteuid \
-	setlogin setproctitle setresgid setreuid setrlimit \
+	mkdtemp mmap ngetaddrinfo openpty ogetaddrinfo readpassphrase \
+	realpath recvmsg rresvport_af sendmsg setdtablesize setegid \
+	setenv seteuid setlogin setproctitle setresgid setreuid setrlimit \
 	setsid setvbuf sigaction sigvec snprintf socketpair strerror \
 	strlcat strlcpy strmode strsep sysconf tcgetpgrp utimes \
 	vhangup vsnprintf waitpid __b64_ntop _getpty)
