--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,7 @@
 # $Id$
 
-SHELL = @SH@
+# uncomment if you run a non bourne compatable shell. Ie. csh
+#SHELL = @SH@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
