- (stevesk) [configure.ac] nicer message: --with-privsep-user=user

--- a/configure.ac
+++ b/configure.ac
@@ -915,7 +915,7 @@ AC_DEFINE_UNQUOTED(ENTROPY_TIMEOUT_MSEC, $entropy_timeout)
 
 ssh_privsep_user=sshd
 AC_ARG_WITH(privsep-user,
-	[  --with-privsep-user     Specify non-privileged user for privilege separation],
+	[  --with-privsep-user=user Specify non-privileged user for privilege separation],
 	[
 		if test -n "$withval"; then
 			ssh_privsep_user=$withval
