- (stevesk) [configure.ac] bug #255 LOGIN_NEEDS_UTMPX for AIX.

--- a/configure.ac
+++ b/configure.ac
@@ -76,6 +76,7 @@ case "$host" in
 	AC_DEFINE(BROKEN_REALPATH)
 	dnl AIX handles lastlog as part of its login message
 	AC_DEFINE(DISABLE_LASTLOG)
+	AC_DEFINE(LOGIN_NEEDS_UTMPX)
 	;;
 *-*-cygwin*)
 	LIBS="$LIBS /usr/lib/textmode.o"
