- (bal) NO_IPPORT_RESERVED_CONCEPT used instead of CYGWIN so other platforms    lacking that concept can share it. Patch by vinschen@redhat.com

--- a/configure.ac
+++ b/configure.ac
@@ -91,6 +91,7 @@ case "$host" in
 	AC_DEFINE(IPV4_DEFAULT)
 	AC_DEFINE(IP_TOS_IS_BROKEN)
 	AC_DEFINE(NO_X11_UNIX_SOCKETS)
+	AC_DEFINE(NO_IPPORT_RESERVED_CONCEPT)
 	AC_DEFINE(DISABLE_FD_PASSING)
 	AC_DEFINE(SETGROUPS_NOOP)
 	;;
