--- a/configure.ac
+++ b/configure.ac
@@ -602,7 +602,8 @@ AC_CHECK_FUNCS(arc4random b64_ntop bcopy bindresvport_sa \
 	setenv seteuid setgroups setlogin setproctitle setresgid setreuid \
 	setrlimit setsid setpcred setvbuf sigaction sigvec snprintf \
 	socketpair strerror strlcat strlcpy strmode strvis sysconf \
-	tcgetpgrp truncate utimes vhangup vsnprintf waitpid __b64_ntop \		_getpty)
+	tcgetpgrp truncate utimes vhangup vsnprintf waitpid __b64_ntop \
+	_getpty)
 
 dnl Make sure strsep prototype is defined before defining HAVE_STRSEP
 AC_CHECK_DECL(strsep, [AC_CHECK_FUNCS(strsep)])
