--- a/configure.ac
+++ b/configure.ac
@@ -610,8 +610,7 @@ AC_CHECK_FUNCS(arc4random b64_ntop bcopy bindresvport_sa \
 	setenv seteuid setgroups setlogin setproctitle setresgid setreuid \
 	setrlimit setsid setpcred setvbuf sigaction sigvec snprintf \
 	socketpair strerror strlcat strlcpy strmode strnvis sysconf \
-	tcgetpgrp truncate utimes vhangup vsnprintf waitpid __b64_ntop \
-	_getpty)
+	truncate utimes vhangup vsnprintf waitpid __b64_ntop _getpty)
 
 dnl Make sure strsep prototype is defined before defining HAVE_STRSEP
 AC_CHECK_DECL(strsep, [AC_CHECK_FUNCS(strsep)])
