- (bal) Disable Privsep for Tru64 after pre-authentication due to issues    with SIA.  Also, clean up of tru64 support patch by Chris Adams    <cmadams@hiwaay.net>

--- a/configure.ac
+++ b/configure.ac
@@ -331,6 +331,7 @@ mips-sony-bsd|mips-sony-newsos4)
 			AC_MSG_RESULT(yes)
 			AC_DEFINE(HAVE_OSF_SIA)
 			AC_DEFINE(DISABLE_LOGIN)
+			AC_DEFINE(DISABLE_FD_PASSING)
 			LIBS="$LIBS -lsecurity -ldb -lm -laud"
 		else
 			AC_MSG_RESULT(no)
