- (djm) Add back radix.o (used by AFS support), after it went missing from    Makefile many moons ago  - (djm) Apply "owl-always-auth" patch from Openwall/Solar Designer  - (djm) Fix blibpath specification for AIX/gcc  - (djm) Some systems have basename in -lgen. Fix from ayamura@ayamura.org

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,7 +62,7 @@ TARGETS=ssh$(EXEEXT) sshd$(EXEEXT) ssh-add$(EXEEXT) ssh-keygen$(EXEEXT) ssh-keys
 
 LIBSSH_OBJS=authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o \
 	cipher.o compat.o compress.o crc32.o deattack.o fatal.o \
-	hostfile.o log.o match.o mpaux.o nchan.o packet.o readpass.o \
+	hostfile.o log.o match.o mpaux.o nchan.o packet.o radix.o readpass.o \
 	rsa.o tildexpand.o ttymodes.o xmalloc.o atomicio.o \
 	key.o dispatch.o kex.o mac.o uuencode.o misc.o \
 	rijndael.o ssh-dss.o ssh-rsa.o dh.o kexdh.o kexgex.o \
