- (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]    Call setauthdb() before loginfailed(), which may load password registry-    specific functions.  Based on patch by cawlfiel@us.ibm.com.

--- a/configure.ac
+++ b/configure.ac
@@ -95,6 +95,7 @@ case "$host" in
 		[],
 		[#include <usersec.h>]
 	)
+	AC_CHECK_FUNCS(setauthdb)
 	AC_DEFINE(BROKEN_GETADDRINFO)
 	AC_DEFINE(BROKEN_REALPATH)
 	dnl AIX handles lastlog as part of its login message
