--- a/configure.ac
+++ b/configure.ac
@@ -298,7 +298,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	fi
 	sol2platform=`echo "$host"| sed -e 's/-solaris.*$//'`
 	if test "$sol2platform" -eq "i386-pc"; then
-		AC_DEFINE(BROKEN_ADDRINFO)
+		AC_DEFINE(BROKEN_GETADDRINFO)
 	fi
 	;;
 *-*-sunos4*)
