- [Makefile.in regress/agent-getpeereid.sh] config.h is now in $BUILDDIR      not $OBJ.

--- a/Makefile.in
+++ b/Makefile.in
@@ -383,6 +383,7 @@ tests:	$(TARGETS)
 	$(MAKE) \
 		.OBJDIR="$${BUILDDIR}/regress" \
 		.CURDIR="`pwd`" \
+		BUILDDIR="$${BUILDDIR}" \
 		OBJ="$${BUILDDIR}/regress" \
 		PATH="$${BUILDDIR}:$${PATH}" \
 		TEST_SSH_SSH="$${TEST_SSH_SSH}" \
