- [Makefile.in regress/agent-ptrace] Fix minor regress issues on Cygwin.

--- a/Makefile.in
+++ b/Makefile.in
@@ -394,5 +394,5 @@ tests:	$(TARGETS)
 		TEST_SSH_SSHKEYSCAN="$${TEST_SSH_SSHKEYSCAN}" \
 		TEST_SSH_SFTP="$${TEST_SSH_SFTP}" \
 		TEST_SSH_SFTPSERVER="$${TEST_SSH_SFTPSERVER}" \
-		EXEEXT="$${EXEEXT}" \
+		EXEEXT="$(EXEEXT)" \
 		$@
