- (dtucker) [Makefile regress/Makefile] Fix portability issues preventing    the regression tests from running with Solaris' make.  Patch from Brian    Poole (raj at cerias.purdue.edu).
Further info:  Solaris' /usr/ccs/bin/make
* requires a space before "+=" (but not "=")
* does not like @for

The bit that relies on a trailing "/" on $OBJ so "rm ${OBJ}$$F works in the
current dir if OBJ isn't set is my fault.  Nasty but it works.

--- a/Makefile.in
+++ b/Makefile.in
@@ -386,7 +386,7 @@ tests:	$(TARGETS)
 		.OBJDIR="$${BUILDDIR}/regress" \
 		.CURDIR="`pwd`" \
 		BUILDDIR="$${BUILDDIR}" \
-		OBJ="$${BUILDDIR}/regress" \
+		OBJ="$${BUILDDIR}/regress/" \
 		PATH="$${BUILDDIR}:$${PATH}" \
 		TEST_SSH_SSH="$${TEST_SSH_SSH}" \
 		TEST_SSH_SSHD="$${TEST_SSH_SSHD}" \
