- (dtucker) [configure.ac] Bug #655: uid swapping issues on Mac OS X.    Patch from max at quendi.de.

--- a/configure.ac
+++ b/configure.ac
@@ -131,6 +131,9 @@ main() { if (NSVersionOfRunTimeLibrary("System") >= (60 << 16))
 }], [AC_MSG_RESULT(working)],
 	[AC_MSG_RESULT(buggy)
 	AC_DEFINE(BROKEN_GETADDRINFO)],
+	AC_DEFINE(SETEUID_BREAKS_SETUID)
+	AC_DEFINE(BROKEN_SETREUID)
+	AC_DEFINE(BROKEN_SETREGID)
 	[AC_MSG_RESULT(assume it is working)])
 	;;
 *-*-hpux10.26)
