--- a/configure.ac
+++ b/configure.ac
@@ -230,6 +230,11 @@ mips-sony-bsd|mips-sony-newsos4)
 *-*-freebsd*)
 	check_for_libcrypt_later=1
 	;;
+*-*-bsdi*)
+	AC_DEFINE(SETEUID_BREAKS_SETUID)
+	AC_DEFINE(BROKEN_SETREUID)
+	AC_DEFINE(BROKEN_SETREGID)
+	;;
 *-next-*)
 	conf_lastlog_location="/usr/adm/lastlog"
 	conf_utmp_location=/etc/utmp
