- (dtucker) [configure.ac] IRIX5 needs the same setre[ug]id defines as IRIX6.

--- a/configure.ac
+++ b/configure.ac
@@ -189,6 +189,9 @@ main() { if (NSVersionOfRunTimeLibrary("System") >= (60 << 16))
 	LDFLAGS="$LDFLAGS"
 	PATH="$PATH:/usr/etc"
 	AC_DEFINE(BROKEN_INET_NTOA)
+	AC_DEFINE(SETEUID_BREAKS_SETUID)
+	AC_DEFINE(BROKEN_SETREUID)
+	AC_DEFINE(BROKEN_SETREGID)
 	AC_DEFINE(WITH_ABBREV_NO_TTY)
 	AC_DEFINE(LOCKED_PASSWD_STRING, "*LK*")
 	;;
