--- a/Makefile.in
+++ b/Makefile.in
@@ -222,6 +222,7 @@ catman-do:
 
 distprep: catman-do
 	$(AUTORECONF)
+	-rm -rf autom4te.cache
 	(cd scard && $(MAKE) -f Makefile.in distprep)
 
 install: $(CONFIGFILES) ssh_prng_cmds.out $(MANPAGES) $(TARGETS) install-files host-key check-config
