- (dtucker) [acconfig.h configure.ac includes.h servconf.c session.c]    Change AFS symbol to USE_AFS to prevent namespace collisions, do not    include kafs.h unless necessary.  From deengert at anl.gov.
For consistency, all of the libkafs bits are now inside "#if defined(KRB5)
&& defined(USE_AFS)".

--- a/configure.ac
+++ b/configure.ac
@@ -2128,7 +2128,7 @@ AC_ARG_WITH(kerberos5,
 		fi
 	fi ]
 	AC_SEARCH_LIBS(k_hasafs, kafs,
-		[ AC_DEFINE(AFS)
+		[ AC_DEFINE(USE_AFS)
 		  K5LIBS="-lkafs $K5LIBS"
 		]
 	)
