- (dtucker) [acconfig.h configure.ac defines.h] Bug #820: don't use    updwtmpx() on IRIX since it seems to clobber utmp.  ok djm@

--- a/configure.ac
+++ b/configure.ac
@@ -235,6 +235,7 @@ main() { if (NSVersionOfRunTimeLibrary("System") >= (60 << 16))
 	AC_DEFINE(SETEUID_BREAKS_SETUID)
 	AC_DEFINE(BROKEN_SETREUID)
 	AC_DEFINE(BROKEN_SETREGID)
+	AC_DEFINE(BROKEN_UPDWTMPX)
 	AC_DEFINE(WITH_ABBREV_NO_TTY)
 	AC_DEFINE(LOCKED_PASSWD_STRING, "*LK*")
 	;;
