- (bal) [acconfig.h auth-krb5.c configure.ac gss-serv-krb5.c] Check to see    if Krb5 library exports krb5_init_etc() since some OSes (like MacOS/X)    are starting to restrict it as internal since it is not needed by     developers any more. (Patch based on Apple tree) - (bal) [monitor.c monitor_wrap.c] monitor_wrap.c] moved zlib.h higher since     krb5 on MacOS/X conflicts.  There may be a better solution, but this will     work for now.

--- a/configure.ac
+++ b/configure.ac
@@ -2240,6 +2240,7 @@ AC_ARG_WITH(kerberos5,
 
 	LIBS="$LIBS $K5LIBS"
 	AC_SEARCH_LIBS(k_hasafs, kafs, AC_DEFINE(USE_AFS))
+	AC_SEARCH_LIBS(krb5_init_ets, $K5LIBS, AC_DEFINE(KRB5_INIT_ETS))
 	]
 )
 
