- (dtucker) [acconfig.h configure.ac sftp-server.c] Bug #823: add sftp    rename handling for Linux which returns EPERM for link() on (at least some)    filesystems that do not support hard links.  sftp-server will fall back to    stat+rename() in such cases.

--- a/configure.ac
+++ b/configure.ac
@@ -254,6 +254,7 @@ main() { if (NSVersionOfRunTimeLibrary("System") >= (60 << 16))
 	AC_DEFINE(PAM_TTY_KLUDGE)
 	AC_DEFINE(LOCKED_PASSWD_PREFIX, "!")
 	AC_DEFINE(SPT_TYPE,SPT_REUSEARGV)
+	AC_DEFINE(LINK_OPNOTSUPP_ERRNO, EPERM)
 	inet6_default_4in6=yes
 	case `uname -r` in
 	1.*|2.0.*)
