- (tim) [configure.ac] updwtmpx() on OpenServer seems to add duplicate entry.    Report by rac AT tenzing.org

--- a/configure.ac
+++ b/configure.ac
@@ -393,6 +393,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	AC_DEFINE(BROKEN_SETREUID)
 	AC_DEFINE(BROKEN_SETREGID)
 	AC_DEFINE(WITH_ABBREV_NO_TTY)
+	AC_DEFINE(BROKEN_UPDWTMPX)
 	AC_CHECK_FUNCS(getluid setluid)
 	MANTYPE=man
 	TEST_SHELL=ksh
